# paper2md

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  environment-gpu.yml  environment-mac.yml  pyproject.toml
docs/: BATCH.md  USAGE.md
docs/comparisons/: ALTERNATIVES_NO_CUDA.md  COMPARISON_DOCLING.md  COMPARISON_LIT_LAKE.md  COMPARISON_MINERU.md  COMPARISON_PYMUPDF4LLM.md
docs/design/: COPYRIGHT_AND_REUSE.md  FLOWCHART.md
docs/dev/: CCPLAN.md  CLAUDE.md  EXAMPLES_FIXTURES.md  HYBRID_IMPLEMENTATION.md  RELEASE_INSTRUCTIONS.md
docs/setup/: SOL_ARM_INTERACTIVE.md  SOL_SETUP.md  SPARK_SETUP.md  sol_batch.sbatch
examples/: README.md
src/: audit_md.py  data_repos.py  layout_mineru.py  manual_edit.py  metadata_frontend.py  mineru_recovery.py  paper2md.py  repack_h5.py  split_pdf.py  triage_pdfs.py  unpack_h5.py  vlm_table.py  wrap_mineru.py
tests/: bench_figure_match.py  bench_mineru.py  bench_table_extract.py  conftest.py  test_audit_md.py  test_batch_si_isolation.py  test_finders.py  test_hybrid_layout.py  test_journal_rescue.py  test_mac_libomp_workaround.py  test_manual_edit.py  test_metadata_frontend.py  test_mineru_recovery.py  test_mineru_version_check.py  test_paper2md_mineru_layout.py  test_references_score.py  test_subpanel_consolidation.py  test_table_fallback.py  test_triage_pdfs.py  test_vlm_sampling.py  test_vlm_table.py  test_vlm_tables_force.py  test_wrap_mineru.py
tests/figure_match_truth/: Elliott.yaml  README.md  aastex.yaml  canup.yaml  jacquet.yaml  millot.yaml  mnras.yaml  young.yaml
tests/table_extract_truth/: millot_si.yaml  (+1 more)
